Fix margins on iPhone screens and allow images to size down appropriately.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,7 +76,7 @@ li:last-child::before {
 
 .content {
     max-width:960px;
-    min-width:400px;
+    min-width:340px;
     text-align: left;
     font-family: 'GalanoClassic-Regular',sans-serif;
 }
@@ -99,8 +99,8 @@ li:last-child::before {
     display:inline-block;
     position: relative;
     height:300px;
-    width:400px;
-    white-space: nowrap;
+    width:100%;
+    max-width: 400px;
     overflow:hidden;
 }
 .recent-work .item .img-container {
@@ -149,8 +149,11 @@ li:last-child::before {
 }
 
 @media (max-width: 764px) {
+    body {
+        margin: 0 10px;
+    }
     h1 {
-        font-size: 4.5em;
+        font-size: 4em;
     }
     .recent-work-page .preview-image {
         width:100%;
